Fixed two bugs: 1) The "visibility warnings" on protected elements was misaligned. 2) The create new meeting erroneously marked the meeting as dirty.

--- a/main_server/local_server/server_admin/style/styles.css
+++ b/main_server/local_server/server_admin/style/styles.css
@@ -822,6 +822,7 @@ div.bmlt_admin_meeting_one_format_div input
 
 span.bmlt_admin_visibility_advice_span
 {
+    text-align: left;
     padding-left:0.1em;
     font-style:italic;
     color:#009;
